--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   charts_flutter: ^0.9.0
+  bfast: ^3.0.0-beta.0
   provider: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
