--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   charts_flutter: ^0.9.0
   bfast: ^3.0.0-beta.0
   provider: ^4.0.0
+  email_validator: ^1.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
