--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,11 @@ dependencies:
   flutter:
     sdk: flutter
   charts_flutter: ^0.9.0
-  bfast: ^3.0.0-beta.0
-  bfastui: ^1.0.0-beta.5
+  bfast: ^3.0.0-beta.1
+#    git:
+#      url: https://github.com/fahamutech/bfast-flutter
+  bfastui: ^1.0.0-beta.6
+  email_validator: ^1.0.0
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
