--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,13 @@ dependencies:
   flutter:
     sdk: flutter
   charts_flutter: ^0.9.0
-  bfast: ^3.0.0-beta.1
+  bfast: ^3.0.0-beta.2
 #    git:
 #      url: https://github.com/fahamutech/bfast-flutter
-  bfastui: ^1.0.0-beta.6
-  email_validator: ^1.0.0
+#      ref: 3.x
+  bfastui: ^1.0.0-beta.7
+  flutter_form_builder: ^3.11.4
+  flutter_chips_input: ^1.9.0-dev.1
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
