--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
 #      ref: 3.x
   bfastui: ^1.0.0-beta.7
   flutter_form_builder: ^3.11.4
-  flutter_chips_input: ^1.9.0-dev.1
+  #flutter_chips_input: ^1.9.0-dev.2
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
