--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: smartstock
 description: SmartStock mobile application
-version: 1.0.0
+version: 1.0.0-beta.0
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
