--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ dependencies:
   flutter:
     sdk: flutter
   charts_flutter: ^0.9.0
+  flutter_driver:
+    sdk: flutter
+  test: any
   uuid: ^2.2.0
   bfast: ^3.0.0-beta.3
   #    git:
@@ -19,7 +22,7 @@ dependencies:
       url: https://github.com/fahamutech/bfast-ui-flutter
       ref: 1.x
   flutter_form_builder: ^3.11.4
-  flutter_chips_input: ^1.9.0-dev.3
+  # flutter_chips_input: ^1.9.0-dev.3
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
