--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,25 +9,25 @@ dependencies:
   flutter:
     sdk: flutter
   charts_flutter: ^0.9.0
-  flutter_driver:
-    sdk: flutter
-  test: any
+  # flutter_driver:
+  #   sdk: flutter
+  # test: any
   uuid: ^2.2.0
-  bfast: ^3.0.0-beta.3
-  #    git:
-  #      url: https://github.com/fahamutech/bfast-flutter
-  #      ref: 3.x
-  bfastui: # ^1.0.0-beta.11
-    git:
-      url: https://github.com/fahamutech/bfast-ui-flutter
-      ref: 1.x
+  bfast: ^3.0.0-beta.6
+    #  git:
+    #    url: https://github.com/fahamutech/bfast-flutter
+    #    ref: 3.x
+  bfastui:  ^1.0.0-beta.11
+    # git:
+    #   url: https://github.com/fahamutech/bfast-ui-flutter
+    #   ref: 1.x
   flutter_form_builder: ^3.11.4
   # flutter_chips_input: ^1.9.0-dev.3
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  # flutter_test:
+  #   sdk: flutter
 
 # The following section is specific to Flutter.
 flutter:
