--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,10 @@ dependencies:
     sdk: flutter
   charts_flutter: ^0.9.0
   uuid: ^2.2.0
-  bfast: ^3.0.0-beta.3
-  #    git:
-  #      url: https://github.com/fahamutech/bfast-flutter
-  #      ref: 3.x
+  bfast: # 3.0.0-beta.5
+      git:
+        url: https://github.com/fahamutech/bfast-flutter
+        ref: 3.x
   bfastui: # ^1.0.0-beta.11
     git:
       url: https://github.com/fahamutech/bfast-ui-flutter
