--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  charts_flutter: ^0.9.0
+ # charts_flutter: ^0.9.0
   uuid: ^2.2.0
   bfast: # 3.0.0-beta.5
       git:
