--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,12 @@ dependencies:
       url: https://github.com/fahamutech/bfast-ui-flutter
       ref: 1.x
   flutter_form_builder: ^3.11.4
-  flutter_chips_input: ^1.9.0-dev.3
+  # flutter_chips_input: ^1.9.0-dev.3
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  # flutter_test:
+  #   sdk: flutter
 
 # The following section is specific to Flutter.
 flutter:
