--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: smartstock_pos
 description: SmartStock mobile application
-version: 1.0.0-beta.1
+version: 1.0.0-beta.2
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -18,8 +18,9 @@ dependencies:
       url: https://github.com/fahamutech/bfast-ui-flutter
       ref: 1.x
   flutter_form_builder: ^3.11.4
-  # flutter_chips_input: ^1.9.0-dev.3
+  flutter_chips_input: ^1.9.0-dev.3
   cupertino_icons: ^0.1.2
+  isolate_handler: ^0.3.1
 
 dev_dependencies:
   # flutter_test:
