re initialize natives

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: smartstock_pos
 description: SmartStock mobile application
-version: 1.0.0-beta.3
+version: 1.0.0
 publish_to: none
 
 environment:
@@ -9,20 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  uuid: ^2.2.0
-  crypto: ^2.1.5
-  bfast: ^4.1.1
-  #    path: ../bfast-flutter
-  #      git:
-  #        url: https://github.com/fahamutech/bfast-flutter
-  #        ref: master
-  bfastui: ^1.1.1
-#    git:
-#      url: https://github.com/fahamutech/bfast-ui-flutter
-#      ref: master
-  flutter_form_builder: ^5.0.0
-  # flutter_chips_input: ^1.9.0-dev.3
-  cupertino_icons: ^0.1.2
+  uuid: any
+  crypto: any
+  bfast: any
+  bfastui: any
+  cupertino_icons: any
 
 #dev_dependencies:
 # flutter_test:
