--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   bfast: any
   bfastui: any
   cupertino_icons: any
+  intl: ^0.17.0
+  flutter_form_builder: ^7.5.0
+  form_builder_validators: ^8.3.0
+  http: any
 
 #dev_dependencies:
 # flutter_test:
