--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   uuid: any
   crypto: any
   bfast: any
-  bfastui: ^1.3.0
+  flutter_modular: ^5.0.3
+  builders: ^2.0.0
   cupertino_icons: any
   intl: ^0.17.0
   flutter_form_builder: ^7.5.0
