--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,5 +69,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-//    implementation 'com.github.fahamutech:posprinter:v0.1.2'
+    implementation 'com.github.fahamutech:posprinter:v0.1.2'
 }
