--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
       path: app_sembast
       version: '>=0.1.0'
   flutter_svg: ^1.1.4
+  workmanager: ^0.5.0
 
 dev_dependencies:
  flutter_test:
