--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,28 +4,25 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: ">=2.3.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  uuid: any
-  crypto: any
-  bfast: 5.0.0-beta.1
+  uuid: ^3.0.6
+  crypto: ^3.0.2
+  bfast: ^5.0.0-beta.1
   flutter_modular: ^5.0.3
   builders: ^2.0.0
-  cupertino_icons: any
   intl: ^0.17.0
-  flutter_form_builder: ^7.5.0
-  form_builder_validators: ^8.3.0
-  http: any
+  http: ^0.13.5
   tekartik_app_flutter_sembast:
     git:
       url: https://github.com/tekartik/app_flutter_utils.dart
       ref: dart2_3
       path: app_sembast
       version: '>=0.1.0'
-  flutter_svg: ^1.1.4
+  flutter_svg: ^1.1.5
   workmanager: ^0.5.0
 
 dev_dependencies:
