--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
       version: '>=0.1.0'
   flutter_svg: ^1.1.5
   workmanager: ^0.5.0
+  timeago: ^3.3.0
 
 dev_dependencies:
  flutter_test:
