--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_svg: ^1.1.5
   workmanager: ^0.5.0
   timeago: ^3.3.0
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
  flutter_test:
