--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   workmanager: ^0.5.0
   timeago: ^3.3.0
   charts_flutter: ^0.12.0
+  printing: ^5.9.3
+  pdf: ^3.8.3
 
 dev_dependencies:
  flutter_test:
@@ -34,7 +36,6 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   uses-material-design: true
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
     - assets/svg/
