--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,20 @@
 {
   "projects": {
-    "default": "smart-stock-manager"
-  }
+    "default": "smart-stock-manager",
+    "web": "smart-stock-manager",
+    "stable": "smart-stock-manager"
+  },
+  "targets": {
+    "smart-stock-manager": {
+      "hosting": {
+        "web": [
+          "smart-stock-manager"
+        ],
+        "edge": [
+          "edge-smartstock"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
