--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,6 @@
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
-*.apk
+release/*.apk
+release/*.aab
+
