--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: smartstock
 description: SmartStock mobile application
-version: 1.0.0-build.2022.10.10.1
+version: 1.0.1-d.2022.10.17-b.2
 publish_to: none
 
 environment:
