--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: smartstock
 description: SmartStock mobile application
 version: 1.0.3-d.2022.11.3-b.4
-#publish_to: smartstock
+publish_to: none
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -29,6 +29,7 @@ dependencies:
   printing: ^5.9.3
   pdf: ^3.8.3
   js: ^0.6.4
+  syncfusion_flutter_xlsio: ^20.3.57-beta
 
 dev_dependencies:
  flutter_test:
