compact cards view of overview

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,19 @@ flutter:
   assets:
     - assets/images/
     - assets/svg/
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-VariableFont_slnt,wght.ttf
+#        - asset: assets/fonts/static/Inter-Black.ttf
+#        - asset: assets/fonts/static/Inter-Bold.ttf
+#        - asset: assets/fonts/static/Inter-ExtraBold.ttf
+#        - asset: assets/fonts/static/Inter-ExtraLight.ttf
+#        - asset: assets/fonts/static/Inter-Light.ttf
+#        - asset: assets/fonts/static/Inter-Medium.ttf
+#        - asset: assets/fonts/static/Inter-Regular.ttf
+#        - asset: assets/fonts/static/Inter-SemiBold.ttf
+#        - asset: assets/fonts/static/Inter-Thin.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
