--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: smartstock
 description: SmartStock mobile application
-version: 1.0.3-d.2022.11.3-b.4
+version: 1.0.7-d.2022.12.30
 publish_to: none
 
 environment:
