--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   pdf: ^3.8.3
   js: ^0.6.4
   syncfusion_flutter_xlsio: ^20.3.57-beta
+  google_mlkit_barcode_scanning: ^0.5.0
 #  fl_chart: ^0.55.2
 
 dev_dependencies:
