--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   js: ^0.6.4
   syncfusion_flutter_xlsio: ^20.3.57-beta
   google_mlkit_barcode_scanning: ^0.5.0
+  camera: ^0.10.4
+  image_picker: ^0.8.7+3
 #  fl_chart: ^0.55.2
 
 dev_dependencies:
