--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: smartstock
 description: SmartStock mobile application
-version: 1.0.7-d.2022.12.30
+version: 1.2.0-2023.5.31-b.0
 publish_to: none
 
 environment:
