--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,10 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>SmartStock need to use photo to read barcode and qrcode</string>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
 		<string>bg-period</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>SmartStock need to use camera to read barcode and qrcode</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
