--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: smartstock
 description: SmartStock mobile application
-version: 1.3.0-2023.7.27-b.0
+version: 1.4.0-2023.9.2-b.0
 publish_to: none
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  uuid: ^3.0.6
-  crypto: ^3.0.2
+  uuid: ^4.0.0
+  crypto: ^3.0.3
   bfast: ^5.0.0-beta.1
   intl: ^0.17.0
   http: ^0.13.5
@@ -20,18 +20,22 @@ dependencies:
       ref: dart2_3
       path: app_sembast
       version: '>=0.1.0'
-  flutter_svg: ^1.1.5
+  flutter_svg: ^2.0.7
   workmanager: ^0.5.1
   timeago: ^3.3.0
   charts_flutter: ^0.12.0
-  printing: ^5.10.4
-  pdf: ^3.10.1
-  js: ^0.6.4
+  printing: ^5.11.0
+  pdf: ^3.10.4
+  js: ^0.6.7
   syncfusion_flutter_xlsio: ^20.3.57-beta
-  google_mlkit_barcode_scanning: ^0.5.0
-  camera: ^0.10.4
-  image_picker: ^0.8.7+3
-  sembast_sqflite: ^2.1.1
+  google_mlkit_barcode_scanning: ^0.9.0
+  camera: ^0.10.5+4
+  image_picker: ^1.0.4
+  sembast_sqflite: ^2.2.0
+  file_picker: ^5.5.0
+  mime: ^1.0.4
+  http_parser: ^4.0.2
+  url_launcher: ^6.1.14
 
 dev_dependencies:
  flutter_test:
