--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   geolocator: ^10.1.0
 #  socket_io_client: ^2.0.3+1
   geolocator_web: ^2.2.0
+  permission_handler: ^11.0.1
 
 dev_dependencies:
  flutter_test:
